@@ -39,6 +39,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #14087: multiprocessing: add Condition.wait_for(). Patch by sbt.
+
 - Issue #14452: SysLogHandler no longer inserts a UTF-8 BOM into the message.
 
 - Issue #14386: Expose the dict_proxy internal type as types.MappingProxyType.
